--- a/algebruh/algebra.tex
+++ b/algebruh/algebra.tex
@@ -428,15 +428,15 @@
 В общем и целом, мы сейчас будем получать что-то вроде $\mathbb{Q}$, но над любым кольцом $R$. Введём отношение $\sim$ на множестве пар $R\times (R\backslash 0)$. Пусть $(a, b)\sim(a', b') \Leftrightarrow ab'=a'b$. Проверим, что мы получили отношение эквивалентности:
 
 \begin{proof}
-    Нужно показать рефлексивность, симметричность и транзитивность. Первые два утверждения очевидны, покажем последнее. Пусть $(a, b)\sim(a', b')$ и $(a', b')\sim(a", b")$, мы хотим показать, что $(a, b)\sim(a", b")$, то есть, $ab"=a"b$. Воспользуемся тем, что мы находимся в области целостности - домножим левую часть последнего равенства на ненулевой $b'$ и преобразуем, используя гипотезы:
+    Нужно показать рефлексивность, симметричность и транзитивность. Первые два утверждения очевидны, покажем последнее. Пусть $(a, b)\sim(a', b')$ и $(a', b')\sim(a'', b'')$, мы хотим показать, что $(a, b)\sim(a'', b'')$, то есть, $ab''=a''b$. Воспользуемся тем, что мы находимся в области целостности - домножим левую часть последнего равенства на ненулевой $b'$ и преобразуем, используя гипотезы:
     \[
-        (ab')b"=b(a'b")=bb'a".
+        (ab')b''=b(a'b'')=bb'a''.
     \]
-    Теперь сократим на $b"$.
+    Теперь сократим на $b'$.
 \end{proof}
 
 \begin{defn}
-    Фактор $R/\sim$ называется \hypertarget{n18}{\textcolor{red}{\textit{полем частных}}} области целостности $R$ и обозначается за $\text{Frac}R$. Элементы будем обозначать дробями.
+    Фактор $R/{\sim}$ называется \hypertarget{n18}{\textcolor{red}{\textit{полем частных}}} области целостности $R$ и обозначается за $\text{Frac}R$. Элементы будем обозначать дробями.
 \end{defn}
 
 Сложение и умножение определяется как в обычной жизни. Осталось проверить, что это действительно поле.
@@ -454,9 +454,220 @@
 
 \subsection{Определение гомоморфизма и изоморфизма колец. Фактор-кольцо}
 
+\begin{defn}
+    Пусть $R$ и $S$ - кольца. Функция $f:R\rightarrow S$ называется \hypertarget{n19}{\textcolor{red}{\textit{гомоморфизмом колец}}}, если для произвольных элементов выполняется
+    \begin{itemize}
+        \item $f(r_1+r_2)=f(r_1)+f(r_2)$;
+        \item $f(r_1r_2)=f(r_1)f(r_2)$.
+    \end{itemize}
+\end{defn}
+
+\begin{lemma}
+    Если $f$ - гомоморфизм, то $f(0)=0$ и $f(-r)=-r$.
+\end{lemma}
+
+\begin{proof}
+    В обоих пунктах - подсчёт двумя способами:\ 
+
+    \begin{itemize}
+        \item $f(0)+f(0)=f(0+0)=f(0)$;
+        \item $f(r)+f(-r)=f(r+(-r))=f(0)=0$
+    \end{itemize}
+\end{proof}
+
+Кстати говоря, не любой гомоморфизм сохраняет единицу.
+
+\begin{exl}
+    Пусть $f:r\rightarrow R\times S$ и $f=r\mapsto (r,0)$. Тогда $f(1)=(1,0)\neq 1$.
+\end{exl}
+
+\begin{defn}
+    Если для гомоморфизма $f$ выполнено $f(1)=1$, то говорят, что он \textit{сохраняет единицу}.
+\end{defn}
+
+С гомоморфизмом связаны два важных понятия, которые мы рассмотрим далее.
+
+\begin{defn}
+    \hypertarget{n20}{\textcolor{red}{\textit{Ядро}}} $\text{Ker}f$ гомоморфизма $f:R\rightarrow S$ - полный прообраз нуля, $f^{-1}(0)$.
+\end{defn}
+
+\begin{lemma}
+    Гомоморфизм $f$ инъективен тогда и только тогда, когда его ядро тривиально: $\text{Ker}f=\{0\}$.
+\end{lemma}
+
+\begin{proof}
+    Потому что $f(x_1)=f(x_2)\Longleftrightarrow f(x_1-x_2)=0$
+\end{proof}
+
+\begin{lemma}
+    $\text{Ker}f$ - двусторонний идеал в $R$.
+\end{lemma}
+
+\begin{proof}
+    Пусть $k\in \text{Ker}f$, тогда для любого $r\in R$ $f(rk)=f(r)f(k)=f(r)\cdot 0 = 0 = 0\cdot f(r)=f(kr)$. Ещё, например, $f(k_1+k_2)=f(k_1)+f(k_2)=0$. Остальные пункты из определения так же очевидны.
+\end{proof}
+
+\begin{defn}
+    \hypertarget{n21}{\textcolor{red}{\textit{Образ}}} области определения гомоморфизма $f$ обозначается как $\text{Im}f$.
+\end{defn}
+
+\begin{lemma}
+    Если $f:R\rightarrow S$ - гомоморфизм, то $f(R)$ - кольцо.
+\end{lemma}
+
+\begin{proof}
+    $f(a)+f(b)=f(a+b)$, $f(a)f(b)=f(ab)$ - как раз.
+\end{proof}
+
+\begin{defn}
+    \hypertarget{n22}{\textcolor{red}{\textit{Изоморфизм}}} - биективный гомоморфизм. Пишут $R\cong S$, если между ними существует изоморфизм.
+\end{defn}
+
+А теперь про фактор-кольца.
+
+\begin{defn}
+    Пусть $R$ - кольцо (возможно, некоммутативное и без единицы), а $I$ - двусторонний идеал. Говорят, что $a$ \hypertarget{n23}{\textcolor{red}{\textit{сравнимо}}} с $b$ по модулю $I$ и пишут $a\equiv b \mod I$, если $a-b\in I$.
+\end{defn}
+
+\begin{lemma}
+    Сравнимость по модулю - отношение эквивалентности.
+\end{lemma}\
+
+Так как мы получили отношение эквивалентности, по нему можно факторизовать. Тогда аналогами классов эквивалентности становятся множества вида $[a]:=\{b\in \mathbb{R}\vert b\equiv a \mod I\}$. Обозначим кмножество всех этих классов за $R/I$. Осталось ввести структуру кольца на этом множестве.\ 
+
+Определим действия: $[a]+[b]=[a+b]$ и $[a][b]=[ab]$. Нетрудно понять, что действия над классами не зависят от выбора \textit{представителя}. Сложение вообще очевидно, а при умножении нужно "прибавить и вычесть",  чтобы собрать.\\
+
+\begin{theorem}
+    Пусть $R$ - произвольное кольцо, возможно, некоммутативное и без единицы; $I\trianglelefteq R$ - двустронний идеал.\ 
+
+    Обозначим за $R/I$ фактор $R$ по отношению эквивалентности $\{a\equiv b\vert a-b\in I\}$, за $[a]$ - класс эквивалентности элемента $a\in R$.\ 
+
+    Тогда:
+    \begin{itemize}
+        \item операции $[a]+[b]=[a+b]$ и $[a][b]=[ab]$ определены корректно и задают на $R/I$ структуру кольца;
+        \item если $R$ коммутативно, то $R/I$ - тоже;
+        \item если $R$ - кольцо с единицей, то $[1]$ - единица $R/I$.
+    \end{itemize}
+\end{theorem}
+
+\begin{proof}
+    В первом пункте мы уже проверили все неочевидные пункты в определении кольца, остальное - тривиально.
+\end{proof}
+
+\begin{defn}
+    $R/I$ - \hypertarget{n24}{\textcolor{red}{\textit{фактор-кольцо}}} $R$ по $I$.
+\end{defn}
+
+\resetall
+
 \subsection{Теорема о гомоморфизме}
 
+\begin{theorem}
+    (\hypertarget{n25}{\textcolor{red}{\textit{Теорема о гомоморфизме}}}). Пусть $f:R\rightarrow S$ - гомоморфизм колец. Тогда $f(R)\cong R/\text{Ker}f$.
+\end{theorem}
+
+\begin{proof}
+    Что мы будем делать по сути: вместо того, чтобы сразу отправлять элемент из $R$ в $S$ посредством $f$, сначала спроецируем его в $R/\text{Ker} f$ и оттуда уже отобразим в $f(R)$. Проверяем следующее для формальности:\ 
+
+    \begin{itemize}
+        \item \textit{Корректность определения}. Пусть $[r]=[r']$. Тогда $r'-r\in \text{Ker} f$, что равносильно $f(r'-r)=0$, а тогда $f(r)=f(r')$.
+        \item \textit{Сюръективность}. По определению $f(R)$ любой элемент оттуда - это $f(r)$ для какого-то элемента $r\in R$, а $f(r)$ - образ $[r]$ при нашем отображении.
+        \item \textit{Сюръективность}. Пусть $f(r_1)=f(r_2)$, тогда $f(r_1-r_2)=0$. Значит, $r_1-r_2\in \text{Ker} f$, что эквивалентно $r_1\equiv r_2 \mod \text{Ker} f$.
+        \item \textit{Сохраняет операции}. $\varphi([a])+\varphi([b])=\varphi([a]+[b])=\varphi([a+b])=f(a+b)=f(a)+f(b)=\varphi([a])+\varphi([b])$. С умножением - агалогично.
+    \end{itemize}
+\end{proof}
+
+Так как билет и так короткий - припишем сюда ещё одну теорему, которой почему-то нет в билетах.\\
+
+\begin{theorem}
+    (\hypertarget{n26}{\textcolor{red}{\textit{Универсальное свойство фактор-кольца}}}). Пусть $R$ - кольцо, $I\trianglelefteq R$ - двусторонний идеал, $\pi: R\rightarrow R/I$ - канонический гомоморфизм, $\varphi: R\rightarrow S$ - гомоморфизм колец, ядро которого содержит $I$: $\varphi(I)=\{0\}$. Тогда:\
+
+    \begin{itemize}
+        \item существует единственный гомоморфизм $\bar{\varphi}:R/I\rightarrow S$ такой, что $\varphi=\bar{\varphi}\circ \pi$;
+        \item $\bar{\varphi}$ задаётся формулой $\bar{\varphi}=[x]\mapsto \varphi(x)$.
+    \end{itemize}
+\end{theorem}
+
+\begin{proof}
+    Раз уж теоремы в списке нет, то доказывать её не будем. Если вкратце, то сначала несложно проверяется единственность, затем - корректность, и, наконец, рутинная проверка на гомоморфизм.
+\end{proof}
+
+\resetall
+
 \subsection{Кольцо многочленов. Целостность и евклидовость кольца многочленов над полем}
+
+\begin{defn}
+    \hypertarget{n27}{\textcolor{red}{\textit{Многочлен}}} - комбинация вида $\sum_{i=0}^\infty a_ix^i$, где почти все (кроме конечного числа) $\{a_i\}$ равны нулю. В кольце может и не быть единицы, но даже тогда мы определяем $a_0x^0:=a_0$ для удобства нотации.
+\end{defn}
+
+\begin{defn}
+    $a$ \textit{коммутриует} с $b$, если $ab=ba$.
+\end{defn}
+
+\begin{defn}
+    \hypertarget{n28}{\textcolor{red}{\textit{Кольцо многочленов}}} $R[x]$ - кольцо $R$ вместе с некоторыми $x\notin R$, для которых выполняются следующие свойства:\ 
+
+    \begin{itemize}
+        \item $\forall a\in R:ax=xa$;
+        \item $\sum a_ix^i+\sum b_ix^i=\sum(a_i+b_i)x^i$;
+        \item $-\sum a_ix^i=\sum-a_ix^i$;
+        \item нуль есть $\sum 0x^i$;
+        \item умножение по формуле свёртки: если 
+        \[
+            \biggl(\sum_i a_i x^i\biggr)\biggl(\sum_j b_j x^j\biggr)=\sum_k c_k x^k, 
+        \]
+        то
+        \[
+            c_k=a_kb_0+a_{k-1}b_1+\dots+a_0b_k=\sum_{i+j=k}a_ib_j.
+        \]
+    \end{itemize}
+\end{defn}
+
+\begin{defn}
+    \hypertarget{n29}{\textcolor{red}{\textit{Степень многочлена}}} $\deg \sum a_i x^i$ - наибольшее $i$ такое, что $a_i\neq 0$. Если таких $i$ нет (многочлен нулевой), то его степень определять не будем.
+\end{defn}
+
+\begin{cons}
+    Из определения степени сразу следует несколько свойств: \
+
+    \begin{itemize}
+        \item $\deg(f+g)\leq\deg f+\deg g$;
+        \item $\deg(fg)\leq\deg f+\deg g$ для ненулевых $f, g$;
+        \item $\deg(fg)=\deg f+\deg g$ для ненулевых $f, g$, если мы находимся в области целостности.
+    \end{itemize}
+\end{cons}
+
+Последнее получается постольку поскольку старшие коэффициенты просто перемножеются, поэтому можно сформулировать такую лемму:\\
+
+\begin{lemma}
+    Если $R$ - область, то и $R[x]$ - область.
+\end{lemma}\
+
+А сейчас будем учиться делить многочлены с остатком, тем самым, покажем, что полученное кольцо евклидово (не всегда, конечно).\\
+
+\begin{lemma}
+    Пусть $R$ - кольцо, $f=a_nx^n+\dots \in R[x]$, $g=b_mx^m+\dots\in R[x]$, $\forall i: b_m^{n-m+1}\vert a_i$. Тогда существуют многочлены $q,r\in R[x]$ такие, что $f=gq+r$ и $r=0\vee \deg r<\deg g$.
+\end{lemma}
+
+\begin{proof}
+    Докажем индукцией по $n$. База: если  $n<m$, то положим $q:=0$ и $r:=f$.\ 
+
+    Пусть теперь $n\geq m$. По условию делимости $b_m^{n-m-1}c:=a_n$ для некоторог $c$. Посмотрим на $f_1:=f-tg$, где $t:=cb_m^{n-m}x^{n-m}$ - страший член неполного частного. $\deg tg = n$, потому старший член сократился при делении. Предположение индукции верно для пары $f_1,g$, так как единственный аспект под вопросом - делимость коэффициентов, но он тоже верен, что видно из определения $f_1$. Тогда применим индукцию: $f_1=q_1g+r$. Подставим $f=(t+q_1)g+r$. $r$ найден.
+\end{proof}
+
+\begin{cons}
+    Пусть $F$ - поле. Тогда $F[x]$ - евклидово кольцо.
+\end{cons}
+
+\begin{proof}
+    По доказанному выше, $\deg: F[x]\backslash 0\rightarrow \mathbb{N}_0$ - евклидова норма, потому что старший коэффициент ненулевого многочлена всегда обратим.
+\end{proof}
+
+\begin{remark}
+    А вот для евклидова $R$, $R[x]$ не обязательно будет евклидовым кольцом.
+\end{remark}
+
+\resetall
 
 \subsection{Лемма Гаусса}
 
@@ -528,22 +739,32 @@
     ]
 
     \hyperlink{n4}{ассоциированность}\
+
+    \hyperlink{n19}{гомоморфизм}\
     
     \hyperlink{n3}{делитель нуля}\
 
     \hyperlink{n5}{евклидово кольцо}\
 
     \hyperlink{n9}{идеал}\
+
+    \hyperlink{22}{изоморфизм}\
     
     \hyperlink{n1}{кольцо, а также его вариации}\
 
     \hyperlink{n14}{кольцо вычетов}\
 
+    \hyperlink{n28}{кольцо многочленов}\
+
     \hyperlink{n15}{КТО}\
+
+    \hyperlink{n27}{многочлен}\
 
     \hyperlink{n7}{неприводимые}\
 
     \hyperlink{n6}{НОД}\
+
+    \hyperlink{n21}{образ}\
 
     \hyperlink{n10}{ОГИ}\
 
@@ -557,9 +778,21 @@
 
     \hyperlink{n8}{простые}\ 
 
+    \hyperlink{n23}{сравнимость}\
+
+    \hyperlink{n29}{степень многочлена}\
+
+    \hyperlink{n25}{теорема о гомоморфизме}\
+
+    \hyperlink{n26}{универсальное св-во фактор-кольца}\
+
     \hyperlink{n11}{УОВЦГИ}\
 
     \hyperlink{n12}{факториальность}\
+
+    \hyperlink{n24}{фактор-кольцо}\
+
+    \hyperlink{n20}{ядро}\
     
 
 \end{multicols}
