--- a/algebruh/algebra.tex
+++ b/algebruh/algebra.tex
@@ -34,7 +34,7 @@
 %\geometry{verbose,a4paper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=1.5cm}
 
 \title{Алгебра}
-\author{Мастера конспектов}
+\author{Кабашный Иван\\ (по материалам конспекта старшекурсников, \\ написанном на основе лекций В. А. Петрова)}
 \date{22 января 2020 г.}
 
 \theoremstyle{indented}
@@ -48,6 +48,13 @@
 \theoremstyle{remark} 
 \newtheorem{remark}{Примечание}
 \newtheorem{cons}{Следствие}
+
+\DeclareMathOperator{\Ker}{Ker}
+\DeclareMathOperator{\Frac}{Frac}
+\DeclareMathOperator{\Imf}{Im}
+\DeclareMathOperator{\cont}{cont}
+\DeclareMathOperator{\id}{id}
+\DeclareMathOperator{\ev}{ev}
 
 \begin{document}
 
@@ -535,7 +542,7 @@
 
 Так как мы получили отношение эквивалентности, по нему можно факторизовать. Тогда аналогами классов эквивалентности становятся множества вида $[a]:=\{b\in \mathbb{R}\vert b\equiv a \mod I\}$. Обозначим кмножество всех этих классов за $R/I$. Осталось ввести структуру кольца на этом множестве.\ 
 
-Определим действия: $[a]+[b]=[a+b]$ и $[a][b]=[ab]$. Нетрудно понять, что действия над классами не зависят от выбора \textit{представителя}. Сложение вообще очевидно, а при умножении нужно "прибавить и вычесть",  чтобы собрать.\\
+Определим действия: $[a]+[b]=[a+b]$ и $[a][b]=[ab]$. Нетрудно понять, что действия над классами не зависят от выбора \textit{представителя}. Сложение вообще очевидно, а при умножении нужно ''прибавить и вычесть'',  чтобы собрать.\\
 
 \begin{theorem}
     Пусть $R$ - произвольное кольцо, возможно, некоммутативное и без единицы; $I\trianglelefteq R$ - двустронний идеал.\ 
@@ -572,7 +579,7 @@
     \begin{itemize}
         \item \textit{Корректность определения}. Пусть $[r]=[r']$. Тогда $r'-r\in \text{Ker} f$, что равносильно $f(r'-r)=0$, а тогда $f(r)=f(r')$.
         \item \textit{Сюръективность}. По определению $f(R)$ любой элемент оттуда - это $f(r)$ для какого-то элемента $r\in R$, а $f(r)$ - образ $[r]$ при нашем отображении.
-        \item \textit{Сюръективность}. Пусть $f(r_1)=f(r_2)$, тогда $f(r_1-r_2)=0$. Значит, $r_1-r_2\in \text{Ker} f$, что эквивалентно $r_1\equiv r_2 \mod \text{Ker} f$.
+        \item \textit{Инъективность}. Пусть $f(r_1)=f(r_2)$, тогда $f(r_1-r_2)=0$. Значит, $r_1-r_2\in \text{Ker} f$, что эквивалентно $r_1\equiv r_2 \mod \text{Ker} f$.
         \item \textit{Сохраняет операции}. $\varphi([a])+\varphi([b])=\varphi([a]+[b])=\varphi([a+b])=f(a+b)=f(a)+f(b)=\varphi([a])+\varphi([b])$. С умножением - агалогично.
     \end{itemize}
 \end{proof}
@@ -640,7 +647,7 @@
 Последнее получается постольку поскольку старшие коэффициенты просто перемножеются, поэтому можно сформулировать такую лемму:\\
 
 \begin{lemma}
-    Если $R$ - область, то и $R[x]$ - область.
+    \hypertarget{t3}{Если} $R$ - область, то и $R[x]$ - область.
 \end{lemma}\
 
 А сейчас будем учиться делить многочлены с остатком, тем самым, покажем, что полученное кольцо евклидово (не всегда, конечно).\\
@@ -671,9 +678,191 @@
 
 \subsection{Лемма Гаусса}
 
+\begin{defn}
+    \hypertarget{n30}{\textcolor{red}{\textit{Содержание}}} $\cont f$ для $f\in R[x]$ - это $\gcd$ всех коэффициентов $f$.
+\end{defn}
+
+Видно, что для любого многочлена $f$ существует $f_1:f_1\cont f$ для некоторого $f_1$ такого, что $\cont f\sim 1$.\\
+
+\begin{lemma}
+    (\hypertarget{n31}{\textcolor{red}{\textit{Лемма Гаусса}}}). Если $\cont f\sim 1$ и $\cont g\sim 1$, то $\cont fg \sim 1$.
+\end{lemma}
+
+\begin{proof}
+    Пусть $p\in R$ - простой и $p\vert \cont fg$, ради противоречия. Раз у $fg$ все коэффициенты делятся на $p$, то по модулю $(p)$ он нулевой: $fg=0$ в $R/(p)[x]$. (Конечно, здесь мы имеем в виду его образ при проекции $R[x]\rightarrow R/(p)[x]$, которую естественным образом индуцирует каноническая проекция $\pi: R\rightarrow R/(p):\sum a_i x^i\mapsto \sum \pi (a_i)x^i$). Но поскольку $p$ простой, $R/(p)$ - это область (посмотрим, что такое нуль фактор-кольца и соотнесём с определением простого), а тогда $f=0 \vee g=0$ в $R/(p)[x]$ \hyperlink{t3}{(см)}, что противоречит определению $f$ и $g$.
+\end{proof}
+
+\begin{cons}
+    $(\cont f)(\cont g)\sim cont fg$.
+\end{cons}
+
+\begin{proof}
+    Раз $f_1:f_1\cont f$ b $g_1:g_1\cont g$ для некоторых $f_1, g_1 :\cont f_1, \cont g_1\sim 1$, то $\cont f_1g_1\sim 1$, а тогда $\cont fg=\cont (f_1g_1\cont f \cont g)\sim \cont f_1 g_1 \cont f \cont g\sim \cont f\cont g$.
+\end{proof}
+
+\resetall
+
 \subsection{Факториальность кольца многочленов}
 
+Щас дикий пиздец будет. Пристегнитесь, мы взлетаем. Начнём с леммы, которая встречается в теореме, но доказывалась раньше.\\
+
+\begin{lemma}
+    Если $R$ - нетёрова область. то $R[x]$ тоже нетёрова область.
+\end{lemma}
+
+\begin{proof}
+    Что область, мы уже знаем (\hyperlink{t3}{см}). Поймём нетёровость.\ 
+
+    Предположим противное: пусть $\dots \vert f_2\vert f_1$ - бесконечная цепочка попарно не ассоциированных многочленов. С ростом индексов степень невозрастает, значит, с какого-то момента она стабилизируется. Тогда отбросим начальный отрезок цепочки (конечно, конечный) и будем считать: что все степени равны $n$.\ 
+
+    Однако теперь посмотрим на $i$-ый коэффициент в каждом многочлене и поймём, что для любых двух последовательных $a_i c=b_i$. Однако опять получается бесконечная цепочка, противоречие.
+\end{proof}
+
+Теперь будем плавно переходить к $(\Frac R)[x]$. Пусть $f$ там и лежит. Но тогда заметим, что существует $\tilde{f}\in R[x]$ и $c\in R$ такие, что $f=\frac{\tilde{f}}{c}$. Определим тогда 
+\[
+    \cont f:=\frac{\cont \tilde{f}}{c}.
+\]
+При таком определении всё окей с предыдущими леммами, которые нам понядобятся.\\
+
+\begin{lemma}
+    Пусть $f, g\in R[x]$. Тогда следующие условия эквивалентны:\
+    
+    \begin{itemize}
+        \item $f\vert g$ внутри $R[x]$;
+        \item $f\vert g$ внутри $(\Frac R)[x]$, и $\cont f\vert \cont g$ внутри $R$.
+    \end{itemize}
+\end{lemma}
+
+\begin{proof}
+    В разные стороны поочерёдно:\ 
+
+    \textcolor{red}{$\Rightarrow$} Пусть $g=fh$ для какого-то $h\in R[x]$. Тогда сразу имеем первое условие, а второе вытекает из мультипликативности: $\cont g\sim \cont f\cont h$.\ 
+
+    \textcolor{red}{$\Leftarrow$} Пусть $g:=f\frac{\tilde{h}}{c}$ для некоторых $\tilde{h}\in R[x]$ и $c\in R$. То же самое: $gc=f\tilde{h}$. Применим $\cont$: $c \cont g = (\cont f)(\cont \tilde{h})$. По гипотезе, $\cont g\sim d\cont f$ для некоторого $d\in R$. В итоге $cd\cont f\sim \cont f\cont \tilde{h}$, а мы умеем сокращать в обрастях целостности, тогда $cd\sim \cont \tilde{h}$. Значит, $\cont \tilde{h}$ делитная на $c$, и начальное равенство можно сократить: $g\sim f\hat{h}$, где $\hat{h}$ - какой-то многочлен из $R[x]$. Тогда точно $f\vert g$ внутри $R[x]$.
+\end{proof}
+
+А теперь главное блюдо этого билета.\\
+
+\begin{theorem}
+    (\hypertarget{n32}{\textcolor{red}{\textit{Теорема Гаусса}}}). Если $R$ факториально, то $R[x]$ факториально.
+\end{theorem}
+
+\begin{proof}
+    Про область мы уже знаем, про нетёровость тоже (из всех этих прошлых лемм). Тогда осталость только понять, что если $p\in R[x]$ неприводим, то он прост.\\
+
+    \textit{Первый случай}: $\deg p>0$. \\
+
+    \begin{lemma}
+        Если $p\in R[x]$ - неприводимый многочлен степени хотя бы 1, то $\cont p\sim 1$.
+    \end{lemma}
+
+    \begin{proof}
+        Предположим противное, пусть $\exists c\nsim 1: c\vert \cont p$. Запишем тривиальное разложение $p=c\cdot \frac{p}{c}$. $p$ неприводим и, по определению, неообратим, значит, по крайней мере, один из этих сомножителей ассоциирован с $p$. Если оба с ним ассоциированы, то $p\sim p^2$, откуда, поскольку мы в области, $p\sim 1$, что , опять же, невозможно. Если $c\sim p$ и $\frac{p}{c}\sim 1$, то $\deg p = 0$ - это не случай, который мы рассматриваем. Иначе $c\sim 1$ и $\frac{p}{c}\sim p$ - противоречие с определением уже $c$.
+    \end{proof}
+
+    \begin{lemma}
+        Если $p\in R[x]$ - такой же, как и в предыдущей лемме, то $p$ неприводим в $(\Frac R)[x]$.
+    \end{lemma}
+
+    \begin{proof}
+        Предположим противное: пусть $p:=\frac{\tilde{g}}{c}\frac{\tilde{h}}{d}$, где $\tilde{g}, \tilde{h}\in R[x]$ и $\frac{\tilde{g}}{c}, \frac{\tilde{h}}{d}\nsim 1$ в $(\Frac R)[x]$. Пепепишем: $cdp=\tilde{g}\tilde{h}$. По первой лемме, $\cont p\sim 1$, значит, беря содержание обеих частей, получаем 
+        \[
+            cd\sim (\cont \tilde{g})(\cont \tilde{h}).
+        \]
+        Вернёмся к изначальному $p=\frac{\tilde{g}}{c}\frac{\tilde{h}}{d}$. Здесь $\tilde{g}=(\cont \tilde{g})\hat{g}$ и $\tilde{h}(\cont \tilde{h})\hat{h}$ для некоторых $\hat{g}, \hat{h}\in R[x]$, поэтому
+        \[
+            p=\frac{(\cont \tilde{g})(\cont \tilde{h})}{cd}\hat{g}\hat{h}\sim \hat{g}\hat{h}.
+        \]
+        Воспользуемся неприводимостью $p$ в $R$: скажем, $\hat{g}\sim 1$. Тогда, раз мы в поле, 
+        \[
+            \frac{\tilde{g}}{c}\sim\frac{\cont \tilde{g}}{c}\sim 1, 
+        \]
+        что и требовалось.
+    \end{proof}
+
+    \begin{cons}
+        Более того, в последней лемме $(\Frac R)[x]$ - евклидово, как мы знаем, так что $p$ ещё и простой.
+    \end{cons}
+
+    Осталось показать, что от также простой в $R[x]$.\\
+
+    \begin{lemma}
+        Если $p$ - всё тот же, то он простой в $R[x]$.
+    \end{lemma}
+
+    \begin{proof}
+        Пусть $p\vert ab$ для каких-то $a,b\in R[x]$. По следствию из второй леммы, $p$ простой в $(\Frac R)[x]$, тогда, без ограничения общности, $p\vert a$ в $(\Frac R)[x]$. По первой лемме, $\cont p\sim 1$, а тогда $\cont p\vert \cont a$. Вывели, что $p\vert a$ в  $R[x]$ по лемме, которая была перед теоремой.
+    \end{proof}
+
+    \textit{Второй случай}: $p\in R$ неприводимый в $R[x]$ и $\deg p=0$.\\
+
+    \begin{lemma}
+        $p$ неприводим и в $R$.
+    \end{lemma}
+
+    \begin{proof}
+        Пусть $p=ab$. $a$ и $b$ - тоже какие-то константы, потому что мы в области целостности, и при умножении степени сохраняются. При этом, без ограничения общности, $a\sim 1$ в $R[x]$. Но тогда $a\sim 1$ и в $R$, потому что $R^{\times}=R[x]^{\times}$ (это, похоже, обратимые элементы).
+    \end{proof}
+
+    $R$ факториально, поэтому $p$ простой и в $R$ по определению факториальности. Значит, $R/(p)$ - область, а тогда $R/(p)[x]$ - тоже область. И тут наша последняя лемма:\\
+
+    \begin{lemma}
+        $R/(p)[x]\cong R[x/(p)]$.
+    \end{lemma}
+
+    \begin{proof}
+        Посмотрим на $f=\sum a_i x^i \mapsto \sum [a_i]x^i$. Видно, что он сюръективен, а его ядро - это ровно $(p)\subseteq R[x]$. (Тут типа применяется \hyperlink{n25}{теорема о гомоморфизме}).
+    \end{proof}
+
+    Значит, $R[x]/(p)$ - тоже область. Значит, $p$ - простой в $R[x]$.
+
+\end{proof}
+
+\resetall
+
 \subsection{Теорема Безу. Производная многочлена и кратные корни}
+
+\begin{theorem}
+    (\hypertarget{n33}{\textcolor{red}{\textit{Универсальное свойство кольца многочленов}}}). Пусть $i:R\rightarrow R[x]$ - стандартное вложение (отправляет каждый элемент в себя), $f:R\rightarrow S$ - гомоморфизм колец, $r\in R$ - произвольный элемент. Тогда существует единственный гомоморфизм $ё\bar{f}: R[x]\rightarrow S$ такой, что $f=\bar{f}\circ i$ и $\bar{f}(x)=f(r)$.
+\end{theorem}
+
+\begin{proof}
+    Раз уж в билетах нет, то и доказательства не будет. Определить его не сложно, показать, что гомоморфизм - тоже.
+\end{proof}
+
+\begin{defn}
+    По универсальному свойству кольца многочленов дл $f:=\id _R$ и произвольного $r\in R$ существует единственный $\bar{f}:R[x]\rightarrow R$ такой, что $\bar{f}(x)=f(r)=r$. В этом случае $\bar{f}$ называется \textit{гомоморфизмом вычисления} и обозначается за $\ev_r$.
+\end{defn}
+
+\begin{theorem}
+    (\hypertarget{n34}{\textcolor{red}{\textit{Теорема Безу}}}). $R[x]/(x-a)\simeq R$ посредством $[f(x)]\mapsto f(a)$, где $R$ - коммутативное кольцо с единицей.
+\end{theorem}
+
+\begin{proof}
+    Понятно, что $x-a\in\Ker \ev_a$, тогда и идеал $(x-a)\subset \Ker \ev_a$.\ 
+
+    Теперь нужно показать в обратную сторону. Здесь делим с остатком: пусть $f:=(x-a)g+c$, где $c=f(a)$. Тогда $[f]=[c]$ в $R[x]/(x-a)$. Значит, $f\in (x-a)R[x]\Leftrightarrow f(a=0)$.
+\end{proof}
+
+В общем, опять очередное применение теоремы о гомоморфизме, про образ мы уже понимаем, сам он задаётся корректно, а мы лишь проверяем, что идеал $(x-a)$ есть ядро.\
+
+\begin{defn}
+    Для $f=\sum a_i x^i$ определим $f':=\sum ia_i x^{i-1}$.
+\end{defn}
+
+Тогда видно, что $(f+g)'=f'+g'$, а также $(fg)'=f'g+fg'$, что уже проверить сложнее.\\
+
+\begin{lemma}
+    $a$ - кратный (кратности больше 1) корень $f$ тогда и только тогда, когда $a$ - корень многочлена и его производной.
+\end{lemma}
+
+\begin{proof}
+    Поделим $f$ на $(x-a):f=(x-a)g+f(a)=(x-a)g$. $a$ - кратный корень $f$ тогда и только тогда, когда $g(a)=0$. Теперь давайте продифференцируем это выражение: $f'=g+(x-a)g'$. Отсюда $f'(a)=g(a)$. Что и требовалось.
+\end{proof}
+
+Касательно корней, надеюсь, не забуду написать после интерполяции ещё несколько следствий, которые могут спросить.
+
+\resetall
 
 \subsection{Интерполяция Лагранжа}
 
@@ -758,6 +947,8 @@
 
     \hyperlink{n15}{КТО}\
 
+    \hyperlink{n31}{лемма Гаусса}\
+
     \hyperlink{n27}{многочлен}\
 
     \hyperlink{n7}{неприводимые}\
@@ -778,11 +969,19 @@
 
     \hyperlink{n8}{простые}\ 
 
+    \hyperlink{n30}{содержание}\
+
     \hyperlink{n23}{сравнимость}\
 
     \hyperlink{n29}{степень многочлена}\
 
+    \hyperlink{n34}{теорема Безу}\
+
+    \hyperlink{n32}{теорема Гаусса}\
+
     \hyperlink{n25}{теорема о гомоморфизме}\
+
+    \hyperlink{n33}{универсальное св-во кольца мн-ч}\
 
     \hyperlink{n26}{универсальное св-во фактор-кольца}\
 
