--- a/algebruh/algebra.tex
+++ b/algebruh/algebra.tex
@@ -55,6 +55,8 @@
 \DeclareMathOperator{\cont}{cont}
 \DeclareMathOperator{\id}{id}
 \DeclareMathOperator{\ev}{ev}
+\DeclareMathOperator{\lcm}{lcm}
+\DeclareMathOperator{\chard}{char}
 
 \begin{document}
 
@@ -846,6 +848,10 @@
 
 В общем, опять очередное применение теоремы о гомоморфизме, про образ мы уже понимаем, сам он задаётся корректно, а мы лишь проверяем, что идеал $(x-a)$ есть ядро.\
 
+\begin{proof}
+    (Второе доказательство). Сначала заметим, что для $R[x]/(x)\cong R$ теорема очевидна, а затем при помощи универсального свойства кольца многочленов, выполним замену переменной на $(x-a)$. Условно, у нас есть гомоморфизмы в обе стороны $x\rightarrow (x-a)$ и наоборот $(x+a)\leftarrow x$. Тогда $R[x]/(x-a)\cong R[x]/(x)\cong R$.
+\end{proof}
+
 \begin{defn}
     Для $f=\sum a_i x^i$ определим $f':=\sum ia_i x^{i-1}$.
 \end{defn}
@@ -860,15 +866,120 @@
     Поделим $f$ на $(x-a):f=(x-a)g+f(a)=(x-a)g$. $a$ - кратный корень $f$ тогда и только тогда, когда $g(a)=0$. Теперь давайте продифференцируем это выражение: $f'=g+(x-a)g'$. Отсюда $f'(a)=g(a)$. Что и требовалось.
 \end{proof}
 
-Касательно корней, надеюсь, не забуду написать после интерполяции ещё несколько следствий, которые могут спросить.
-
 \resetall
 
 \subsection{Интерполяция Лагранжа}
 
+\begin{theorem}
+    (Частично Лагранж). Пусть $F$ - поле, $\{a_0, \dots, a_n\}$ - набор его различных элементов. Тогда 
+    \[
+        \frac{F[x]}{(\Pi(x-a_i))}\cong F^n
+    \]
+    посредством
+    \[
+        f\mapsto (f(a_0), \dots, f(a_{n-1})).
+    \]
+\end{theorem}
+
+\begin{proof}
+    Докажем, что его ядро есть $((x-a_0)\dots (x-a_{n-1}))$. Спроецируем $F^n$ на $F$ и применим \hyperlink{n34}{теорему Безу}. Условно говоря, $f$ лежит в ядре $\ev_{a_0, \dots, a_{n-1}}$, но тогда и в ядре $\ev_{a_i}$, где $ev_{a_i}$ - композиция $F[x]\rightarrow F^n\rightarrow F$, то есть, вычисление значения в конкретной точке. Тогда по теореме Безу мы получили, что $x-a_i\vert f$, но над полем они неприводимы и взаимно просты. Тогда по основной теореме арифмитики получим, что их $\lcm$ есть их произведение, тогда $f$ делится на это произведение. И наоборот, если $\Pi(x-a_i)\vert f$, то $\forall i:f(a_i)=0$. Получилось.\ 
+
+    Докажем теперь сюръективность. найдём прообраз $(b_0, \dots, b_{n-1})$.
+    \[
+        \sum_i b_i\cdot \frac{\Pi_{j\neq i}(x-a_j)}{\Pi_{j\neq i}(a_i-a_j)}
+    \]
+    подходит, нетрудно убедиться. Это и есть \textcolor{red}{\hypertarget{35}{\textit{интерполяция по Лагранжу}}} (возможно, надо рассказать только про неё, но тогда совсем пустой билет выходит).
+\end{proof}
+
+\resetall
+
 \subsection{Интерполяция Эрмита}
 
+Концептуально, мы хотим научиться ещё как-нибудь интерполировать. Например, по точкам и значениям производных в них (до каких-то определённых порядков).\\
+
+\begin{theorem}
+    \[
+        \frac{F[x]}{(\Pi(x-a_i)^{m_i})}\cong \frac{F[x]}{((x-a_0)^{m_0})}\times \dots \times \frac{F[x]}{((x-a_n)^{m_n})}
+    \]
+\end{theorem}
+
+\begin{proof}
+    Опять-таки рассмотрим гомоморфизм $f\mapsto (f+(x-a_0)^{m_0}F[x]), \dots , f+(x-a_n)^{m_n}F[x])$. Аналогично предыдущему билету, показываем, что ядро - произведение этих разностей в нужных степенях. Так же раскладываем в проекции по каждому элементу произведения (а была на лекциях такая лемма, что $f[x]$ в $R[x]/((x-a)^m)\longleftrightarrow (f(a), f'(a), \dots, f^{(m-1)})$ (биекция)). $f$ принадлежит ядру, а это равносильно тому, что $(x-a_i)^{m_i}\vert f(x)$, тогда в силу взаимной простоты, произведение $\Pi(x-a_i)^{m_i}$ делит $f(x)$. Тогда ядро и равно этому произведению.\ 
+
+    Теперь нам нужно доказать сюръективность. Зафиксируем $l_i<m_i$. Хотим найти такую $f$, что\\
+
+    \begin{itemize}
+        \item $f^{(l)}(a_j)=0$ для $l<m_j, j\neq i$;
+        \item $f^{(l)}(a_i)=0$ для $l<m_i, l\neq l_i$;
+        \item $f^{(l_i)}(a_i)=1$.
+    \end{itemize}
+
+    Будем считать, что для больших значений $l_i$ (то есть, $\{l_i+1, \dots, m_i-1\}$) мы уже всё проделали.\ 
+
+    Первое условие гласит, что $a_j$ должен быть корнем кратонсти хотя бы $m_j$. Значит, $\Pi_{j\neq i}(x-a_j)^{m_j}\vert f$. Второе и третье же влекут, что $\frac{1}{l_i!}(x-a_i)^{l_i}\vert f$. Рассмотрим тогда 
+    \[
+        f:=C(a_i)\cdot \frac{1}{l_i!}(x-a_i)^{l_i}\Pi_{j\neq i}(x-a_j)^{m_j}, 
+    \]
+    где 
+    \[
+        C(x):=\Biggl(\Bigl((x-a_i)^{l_i}\Pi_{j\neq i}(x-a_j)^{m_j}\bigr)^{(l_i)}\Biggr)^{-1}.
+    \]
+    Он удовлетворяет первому и третьему условию. Единственная проблема состоит в том, чтопроизводные $f^{(l)}$ порядком $l$ выше $l_i$ могут принимать какие-то лишние значения $f^{l}(a_i)$ в точке $a_i$, но эту проблему можно решить, ведь из предположения индукции мы можем вычесть какие-то базисные многочлены с соответствующими коэффициентами и получить новый многочлен, который будет удовлетворять уже всем условиям.\
+
+    Это была \hypertarget{n36}{\textcolor{red}{\textit{интерполяция Эрмита}}}. Простой формулы нет.
+\end{proof}
+
+\resetall
+
 \subsection{Поле разложение многочлена}
+
+Пусть $F$ - поле и $f\in F[x]$. Поле многочленов евклидово и факториально, значит, у $f$ есть неприводимый делитель $g$ ($f=gh$) для некоторого $h$. Рассмотрим теперь  $F[x]/(g)$ - область, поскольку $g$ - простой из-за факториальности $F[x]$. Более того, выполнена лемма:\\
+
+\begin{lemma}
+    Пусть $R$ - коммутативное кольцо главных идеалов с единице, а $p\in R$ - простой. Тогда $R/(p)$ - поле. 
+\end{lemma}
+
+\begin{proof}
+    Пусть $[t]\in R/(p)$ таков, что $[t]\neq [0]$. Тогда $(t, p)=(1)$ по определению $p$, и существует линейной представление НОД: $tu+pv=1$ для некоторых $u, v$, откуда сразу $[tu]=[t][u]=1-[pv]=[1]-[0]$. То есть, вот мы и нашли для каждого обратный по умножению.
+\end{proof}
+
+То есть, что мы тут делаем. Если $g$ - многочлен над $F[x]/(g)$, то у него появляются корни - $[x]$, например, $g([x])=[g(x)]=[0]$. Тем более, $[x]$ - корень $f$. То есть, его, допустим, у нас есть какой-то многочлен, то по нему можно отфакторизовать и получить $R$ расширенное с дополнительными корнями. Пусть тогда $F[x]/(g)$ - это $F_1$, тогда если $a\in F_1$ - найденный нами в $F_1$ корень $f$, то многочлен по теореме Безу представляется как $f=(x-a)f_1$ для некоторого $f_1$ на единицу меньшей степени. Тогда будем так по индукции присоединять корни $f$, пока не придём к полю $F_n$, где $n:=\deg f$.
+
+\begin{defn}
+    $F_n$ из рассуждений выше называется \hypertarget{n37}{\textcolor{red}{\textit{полем разложения}}} $f$.
+\end{defn}
+
+\begin{theorem}
+    Пусть: $F$ - поле, $f\in F[x]$ - многочлен, $n:=deg f$, $F_n$ - поле разложения, $\varphi: F\rightarrow F_n, \psi : F\rightarrow K$ - какие-то вложения, в $K[x]$ $f$ раскладывается на линейные множители.\ 
+
+    Тогда существует (не обязательно единственное) вложение $\bar{\psi}:F_n\rightarrow K$ такое, что $\psi=\bar{\psi}\circ \varphi$. Вэтом смысле, $F_n$ - наименьшее поле, которое содержит все корни $f$.
+\end{theorem}
+
+\begin{proof}
+    Инъективность $\bar{\psi}$, как и $\varphi с \psi$, следует попросту из того, что любой гомоморфизм полей инъективен или тривиален (это обсуждалось на лекциях), а $\bar{\psi}$ должен сохранять единицу, так как $\psi$ и $\varphi$ её сохраняют.\ 
+
+    Будем одказывать факт по индукции. Изначально, мы можем взять в качестве $\bar{\psi}$ просто $\psi$, когда мы ещё не присоединили никаких корней. Теперь доказываем переход. Предполагаем, что $F_i\rightarrow K$ имеется. Тогда рассмотрим новый для какого-то свежеприсоединённого $Y: F[Y]\rightarrow F[Y]/(g(Y))\dashrightarrow K$. Нам нужно: придумать куда отправить $Y$, а также, чтобы было выполнено $g(a)=0$ (для всех остальных элементов всё и так уже прекрасно). То есть, нам нужно выбрать корень $g(x)$ внутри $K$, но такой есть в силе того, что $f$ раскладывается внтури этого поля на множители, тогда и $g$ раскладывается (как его делитель по основной теореме арифметики), оттуда и выберем (любой, отсюда и пропадает единственность). Переход доказан.
+\end{proof}
+
+Некоторые свойства поля разложение, на всякий случай:\\
+
+\begin{lemma}
+    Пусть $R$ - коммутативное кольцо с 1 и задан гомоморфизм $\varphi: \mathbb{Z}\rightarrow R$, $\varphi(1)=1_R$, $\Ker(\varphi)=(p)$.  Если $R$ - область, то $p$ - простое или нуль.
+\end{lemma}\
+
+\begin{lemma}
+    Пусть $R$ - коммутативное кольцо с единицей. Если $\chard (R)=p$ - простое, то отображение $\varphi: R\rightarrow R, \varphi(x)=x^p$ - гомоморфизм колец.
+\end{lemma}\
+
+\begin{lemma}
+    Пусть $f(x), g(x)\in F[x]$, $F$ вкладывается в $E$. Тогда $\gcd_{F[x]}(f(x), g(x))\sim \gcd_{E[x]}(f(x), g(x))$
+\end{lemma}\
+
+\begin{lemma}
+    У многочлена $f(x)\in F[x]$ есть кратный корень тогда и только тогда, когда $f(x)$ и $f'(x)$ не взаимно просты.
+\end{lemma}
+
+\resetall
 
 \subsection{Комплексные числа. Решение квадратных уравнений в $\mathbb{С}$}
 
@@ -938,6 +1049,10 @@
     \hyperlink{n9}{идеал}\
 
     \hyperlink{22}{изоморфизм}\
+
+    \hyperlink{n35}{интерполяция по Лагранжу}\
+
+    \hyperlink{n36}{интерполяция по Эрмиту}\
     
     \hyperlink{n1}{кольцо, а также его вариации}\
 
@@ -964,6 +1079,8 @@
     \hyperlink{n2}{область целостности}\
 
     \hyperlink{n16}{поле}\
+
+    \hyperlink{n37}{поле разложения}\
 
     \hyperlink{n18}{поле частных}\
 
